# omniscience

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  SPEC.md  chat.go  chat_test.go  db.go  go.mod  grouping.go  main.go  theme.go  tui.go  up.go  up_test.go  view_test.go
.omni/omni-improve/: example.md
docs/adr/: 0001-zellij-as-tiling-engine.md  0002-dynamic-lead-rooted-groups.md  0003-rust-compositor-embedded-ptys.md
docs/screenshots/: README.md
legacy-go/: chat.go  console.go  go.mod  hook.go  hook_test.go  main.go  render.go  render2.go  tui_test.go  up.go
proto/dashboard/: NOTES.md  main.go
src/: app.rs  db.rs  hooks.rs  launch.rs  main.rs  recents.rs  term.rs  theme.rs  ui.rs
